# Financial-Advisor

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py  onboarding.py
app/agent/: advisor.py  orchestrator.py  prompts.py
app/agent/tools/: aggregate_spending.py  compute_discretionary_balance.py  project_cash_flow.py  save_profile.py  verdict.py
app/auth/: dependencies.py
app/db/: database.py  models.py
app/eval/: harness.py  scenarios.py
app/services/: postgrest_client.py  profiles.py  transactions.py  usage.py
data/: generate_synthetic_transactions.py  synthetic_transactions.csv
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: BottomNav.jsx  Header.jsx  MoneyInput.jsx  VerdictCard.css  VerdictCard.jsx
frontend/src/lib/: api.js  fields.js  format.js  icons.jsx  markdown.jsx
frontend/src/screens/: Chat.css  Chat.jsx  Login.css  Login.jsx  Numbers.css  Numbers.jsx  Onboarding.css  Onboarding.jsx
scripts/: create_demo_user.py  create_tables.py  create_test_user.py  run_evals.py  seed_synthetic_transactions.py  smoke_test_claude.py  smoke_test_postgrest.py  test_advisor.py  test_budget.py  test_chat_endpoint.py  test_config_hardening.py  test_cors.py  test_finance_tools.py  test_onboarding.py  test_onboarding_endpoint.py  test_rate_limit.py  test_summary.py  test_usage_logging.py  test_verdict.py  test_verdict_tool.py
