[project]
name = "financial-advisor"
version = "0.1.0"
description = "Conversational financial advisor agent (tool-calling, rule-grounded verdicts, eval harness)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyjwt[crypto]>=2.9",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[tool.setuptools.packages.find]
include = ["app*"]
